made chart color selector popup work reliably